<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">HyBid demo</string>
    <string name="native_ad" translatable="false">"Native"</string>
    <string name="banner" translatable="false">Banner</string>
    <string name="interstitial" translatable="false">Interstitial</string>
    <string name="interstitial_video" translatable="false">Interstitial Video</string>
    <string name="medium" translatable="false">Medium</string>
    <string name="medium_video" translatable="false">Medium Video</string>
    <string name="leaderboard" translatable="false">Leaderboard</string>
    <string name="rewarded" translatable="false">Rewarded</string>
    <string name="rewarded_html" translatable="false">Rewarded html</string>
    <string name="banner_in_feed" translatable="false">In-Feed Banner</string>
    <string name="zone_id" translatable="false">Zone ID:</string>
    <string name="chosen" translatable="false">Chosen:</string>
    <string name="pn_settings" translatable="false">HyBid Settings</string>
    <string name="maxads_settings" translatable="false">MaxAds Settings</string>
    <string name="dfp_settings" translatable="false">DFP Settings</string>
    <string name="admob_settings" translatable="false">Admob Settings</string>
    <string name="ironsource_settings" translatable="false">IronSource Settings</string>
    <string name="fairbid_settings" translatable="false">Fairbid Settings</string>
    <string name="chartboost_settings" translatable="false">Chartboost Settings</string>
    <string name="load" translatable="false">Load</string>
    <string name="prepare" translatable="false">Prepare</string>
    <string name="show" translatable="false">Show</string>
    <string name="load_native" translatable="false">Load native</string>
    <string name="clear" translatable="false">Clear</string>
    <string name="add" translatable="false">Add</string>
    <string name="ad_caching_enabled" translatable="false">Ad caching enabled</string>
    <string name="dfp" translatable="false">DFP</string>
    <string name="admob" translatable="false">Admob</string>
    <string name="ironsource" translatable="false">IronSource</string>
    <string name="fairbid" translatable="false">Fairbid</string>
    <string name="chartboost" translatable="false">Chartboost</string>
    <string name="hint_dfp_banner_ad_unit_id" translatable="false">Banner Ad Unit ID</string>
    <string name="hint_dfp_medium_ad_unit_id" translatable="false">Medium Ad Unit ID</string>
    <string name="hint_dfp_leaderboard_ad_unit_id" translatable="false">Leaderboard Ad Unit ID</string>
    <string name="hint_dfp_interstitial_ad_unit_id" translatable="false">Interstitial Ad Unit ID</string>
    <string name="hint_dfp_rewarded_ad_unit_id" translatable="false">Rewarded Ad Unit ID</string>
    <string name="save_dfp_settings" translatable="false">Save DFP settings</string>
    <string name="hint_maxads_sdk_key" translatable="false">App ID</string>
    <string name="hint_maxads_banner_ad_unit_id" translatable="false">Banner Ad Unit ID</string>
    <string name="hint_maxads_medium_ad_unit_id" translatable="false">Medium Ad Unit ID</string>
    <string name="hint_maxads_medium_video_ad_unit_id" translatable="false">Medium Video Ad Unit ID</string>
    <string name="hint_maxads_interstitial_ad_unit_id" translatable="false">Interstitial Ad Unit ID</string>
    <string name="hint_maxads_interstitial_video_ad_unit_id" translatable="false">Interstitial Video Ad Unit ID</string>
    <string name="hint_maxads_native_ad_unit_id" translatable="false">Native Ad Unit ID</string>
    <string name="hint_maxads_rewarded_ad_unit_id" translatable="false">Rewarded Ad Unit ID</string>
    <string name="hint_maxads_rewarded_video_ad_unit_id" translatable="false">Rewarded Video Ad Unit ID</string>
    <string name="save_maxads_settings" translatable="false">Save MaxAds settings</string>
    <string name="hint_admob_app_id" translatable="false">App ID</string>
    <string name="hint_admob_banner_ad_unit_id" translatable="false">Banner Ad Unit ID</string>
    <string name="hint_admob_medium_ad_unit_id" translatable="false">Medium Ad Unit ID</string>
    <string name="hint_admob_medium_video_ad_unit_id" translatable="false">Medium Video Ad Unit ID</string>
    <string name="hint_admob_leaderboard_ad_unit_id" translatable="false">Leaderboard Ad Unit ID</string>
    <string name="hint_admob_interstitial_ad_unit_id" translatable="false">Interstitial Ad Unit ID</string>
    <string name="hint_admob_interstitial_video_ad_unit_id" translatable="false">Interstitial Video Ad Unit ID</string>
    <string name="hint_admob_native_ad_unit_id" translatable="false">Native Ad Unit ID</string>
    <string name="hint_admob_rewarded_ad_unit_id" translatable="false">Rewarded Ad Unit ID</string>
    <string name="save_admob_settings" translatable="false">Save Admob settings</string>
    <string name="hint_ironsource_app_key" translatable="false">App key</string>
    <string name="hint_ironsource_banner_ad_unit_id" translatable="false">Banner Ad Unit ID</string>
    <string name="hint_ironsource_interstitial_ad_unit_id" translatable="false">Interstitial Ad Unit ID</string>
    <string name="hint_ironsource_rewarded_ad_unit_id" translatable="false">Rewarded Ad Unit ID</string>
    <string name="save_ironsouce_settings" translatable="false">Save IronSource settings</string>
    <string name="init_ironsouce" translatable="false">Initialize IronSource SDK</string>
    <string name="mediation_test_suite" translatable="false">Integration test suite</string>
    <string name="hint_pn_apptoken" translatable="false">App token</string>
    <string name="hint_pn_age" translatable="false">Age</string>
    <string name="hint_pn_api_url" translatable="false">API Url</string>
    <string name="hint_pn_keyword" translatable="false">New keyword</string>
    <string name="hint_pn_zone_id" translatable="false">New Zone Id</string>
    <string name="hint_package_name" translatable="false">New package name</string>
    <string name="check_coppa" translatable="false">COPPA Enabled</string>
    <string name="check_test_mode" translatable="false">Test Mode Enabled</string>
    <string name="check_location_tracking" translatable="false">Location Tracking Enabled</string>
    <string name="title_pn_gender" translatable="false">Gender</string>
    <string name="radio_gender_not_set" translatable="false">Not set</string>
    <string name="radio_gender_male" translatable="false">Male</string>
    <string name="radio_gender_female" translatable="false">Female</string>
    <string name="title_pn_keywords" translatable="false">Keywords</string>
    <string name="title_pn_zone_ids" translatable="false">Zone Ids</string>
    <string name="title_browser_priority" translatable="false">Browser Priority</string>
    <string name="title_geolocation_permission" translatable="false">Request Geolocation Permission</string>
    <string name="title_geolocation_permission_status" translatable="false">Geolocation Permission Status</string>
    <string name="geolocation_permission_enabled" translatable="false">"Tracking permission enabled"</string>
    <string name="geolocation_permission_disabled" translatable="false">"Tracking permission disabled"</string>
    <string name="precise_permission_enabled" translatable="false">"Precise location is enabled"</string>
    <string name="precise_permission_disabled" translatable="false">"Precise location is disabled"</string>
    <string name="geolocation_allowed_all_time" translatable="false">"Location is allowed all the time"</string>
    <string name="geolocation_allowed_using_app" translatable="false">"Location is allowed while using the app"</string>
    <string name="geolocation_not_allowed" translatable="false">"Location is not allowed"</string>
    <string name="save_pn_settings" translatable="false">Save HyBid settings</string>
    <string name="save_pn_zone_ids" translatable="false">Save Zone Ids</string>
    <string name="save_pn_keywords" translatable="false">Save Keywords</string>
    <string name="save_package_names" translatable="false">Save Package Names</string>
    <string name="save_settings" translatable="false">Save settings</string>
    <string name="hybid_native" translatable="false">HyBid Native</string>
    <string name="hybid_banner" translatable="false">HyBid Banner</string>
    <string name="action_ask_consent" translatable="false">Ask consent</string>
    <string name="action_edit_consent" translatable="false">Edit consent</string>
    <string name="action_get_consent_string" translatable="false">Show consent string</string>
    <string name="action_check_purpose" translatable="false">Check purpose</string>
    <string name="action_check_vendor" translatable="false">Check vendor</string>
    <string name="action_check_vendor_purpose" translatable="false">Check all purposes for vendor</string>
    <string name="title_iab_v2_consent_string" translatable="false">TCF 2.0 Consent String:</string>
    <string name="title_purpose" translatable="false">Purposes:</string>
    <string name="title_consent_result" translatable="false">Consent result:</string>
    <string name="hint_vendor_id" translatable="false">Vendor ID</string>
    <string name="purpose_tcf2_personalised_ads" translatable="false">Create personalised ads</string>
    <string name="purpose_tcf2_personalised_content" translatable="false">Create personalised content</string>
    <string name="purpose_tcf2_develop_improve_product" translatable="false">Develop and improve products</string>
    <string name="purpose_tcf2_market_research" translatable="false">Market research</string>
    <string name="purpose_tcf2_measure_ad_performance" translatable="false">Measure ad performance</string>
    <string name="purpose_tcf2_measure_content_performance" translatable="false">Measure content performance</string>
    <string name="purpose_tcf2_select_basic_ads" translatable="false">Select basic content</string>
    <string name="purpose_tcf2_select_personalised_ads" translatable="false">Select personalised ads</string>
    <string name="purpose_tcf2_select_personalised_content" translatable="false">Select personalised content</string>
    <string name="purpose_tcf2_store_information" translatable="false">Store information</string>
    <string name="nav_standalone" translatable="false">Standalone</string>
    <string name="nav_pre_bid" translatable="false">Pre-Bid</string>
    <string name="nav_mediation" translatable="false">Mediation</string>
    <string name="nav_consent" translatable="false">Consent</string>
    <string name="nav_settings" translatable="false">Settings</string>
    <string name="general" translatable="false">General</string>
    <string name="fullscreen_video" translatable="false">Fullscreen video</string>
    <string name="check_location_updates" translatable="false">Location Updates</string>
    <string name="check_mraid_expand" translatable="false">MRAID Expand</string>
    <string name="initial_audio" translatable="false">Initial Audio</string>
    <string name="hint_html_mraid_skip_offset" translatable="false">HTML/MRAID Skip Offset</string>
    <string name="hint_video_skip_offset" translatable="false">Video Skip Offset</string>
    <string name="hint_endcard_close_button_delay" translatable="false">EndCard close button delay</string>
    <string name="check_auto_close" translatable="false">Auto Close after Finish</string>
    <string name="click_behaviour" translatable="false">Click Behaviour</string>
    <string name="radio_creative" translatable="false">Creative</string>
    <string name="radio_action_button" translatable="false">Action Button</string>
    <string name="radio_sound_on" translatable="false">On</string>
    <string name="radio_sound_mute" translatable="false">Mute</string>
    <string name="radio_sound_default" translatable="false">Default</string>
</resources>