<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_standalone">

    <fragment
        android:id="@+id/nav_standalone"
        android:name="net.pubnative.lite.demo.ui.fragments.navigation.StandaloneNavFragment"
        android:label="@string/nav_standalone"
        tools:layout="@layout/fragment_nav_standalone" />

    <fragment
        android:id="@+id/nav_pre_bid"
        android:name="net.pubnative.lite.demo.ui.fragments.navigation.PrebidNavFragment"
        android:label="@string/nav_pre_bid"
        tools:layout="@layout/fragment_nav_prebid" />

    <fragment
        android:id="@+id/nav_mediation"
        android:name="net.pubnative.lite.demo.ui.fragments.navigation.MediationNavFragment"
        android:label="@string/nav_mediation"
        tools:layout="@layout/fragment_nav_mediation" />

    <fragment
        android:id="@+id/nav_consent"
        android:name="net.pubnative.lite.demo.ui.fragments.navigation.ConsentNavFragment"
        android:label="@string/nav_consent"
        tools:layout="@layout/fragment_nav_consent" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="net.pubnative.lite.demo.ui.fragments.navigation.SettingsNavFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_nav_settings" />
</navigation>