<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.pubnative.lite.demo.ui.fragments.consent.OguryCMPFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/action_ask_consent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/action_edit_consent" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_get_consent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/action_get_consent_string" />

        <TextView
            android:id="@+id/label_consent_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_iab_v2_consent_string"
            android:textColor="?colorPrimaryVariant"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/view_consent_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autoLink="web"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/label_purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_purpose"
            android:textColor="?colorPrimaryVariant"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <RadioGroup
            android:id="@+id/group_purposes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">
            <RadioButton
                android:id="@+id/radio_personalised_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose_tcf2_personalised_ads"/>
            <RadioButton
                android:id="@+id/radio_personalised_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose_tcf2_personalised_content"/>
            <RadioButton
                android:id="@+id/radio_develop_improve_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose_tcf2_develop_improve_product"/>
            <RadioButton
                android:id="@+id/radio_market_research"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose_tcf2_market_research"/>
            <RadioButton
                android:id="@+id/radio_measure_ad_performance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose_tcf2_measure_ad_performance"/>
            <RadioButton
                android:id="@+id/radio_measure_content_performance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose_tcf2_measure_content_performance"/>
            <RadioButton
                android:id="@+id/radio_select_basic_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose_tcf2_select_basic_ads"/>
            <RadioButton
                android:id="@+id/radio_select_personalised_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose_tcf2_select_personalised_ads"/>
            <RadioButton
                android:id="@+id/radio_select_personalised_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose_tcf2_select_personalised_content"/>
            <RadioButton
                android:id="@+id/radio_store_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose_tcf2_store_information"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_check_purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/action_check_purpose" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_vendor_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_vendor_id"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_check_vendor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/action_check_vendor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_check_vendor_purposes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/action_check_vendor_purpose" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_consent_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_consent_result"
            android:textColor="?colorPrimaryVariant"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/view_consent_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autoLink="web"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:visibility="visible" />

    </LinearLayout>
</ScrollView>