<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="net.pubnative.lite.demo.ui.fragments.AdCustomizationFragment"
    tools:showIn="@layout/activity_ad_customization">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/general"
            android:textColor="?colorPrimaryVariant"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/initial_audio"
            android:textColor="?colorPrimaryVariant"
            android:textSize="14sp"
            android:textStyle="normal" />

        <RadioGroup
            android:id="@+id/group_initial_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_sound_default"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/radio_sound_default" />

            <RadioButton
                android:id="@+id/radio_sound_on"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/radio_sound_on" />

            <RadioButton
                android:id="@+id/radio_sound_mute"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/radio_sound_mute" />
        </RadioGroup>

        <Switch
            android:id="@+id/check_mraid_expand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:text="@string/check_mraid_expand" />

        <Switch
            android:id="@+id/check_location_tracking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:text="@string/check_location_tracking" />

        <Switch
            android:id="@+id/check_location_updates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:text="@string/check_location_updates" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/interstitial"
            android:textColor="?colorPrimaryVariant"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/check_auto_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:text="@string/check_auto_close" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_skip_offset"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_html_mraid_skip_offset"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_video_skip_offset"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_video_skip_offset"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_endcard_close_button_delay"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_endcard_close_button_delay"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/fullscreen_video"
            android:textColor="?colorPrimaryVariant"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/click_behaviour"
            android:textColor="?colorPrimaryVariant"
            android:textSize="14sp"
            android:textStyle="normal" />

        <RadioGroup
            android:id="@+id/group_click_behaviour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_creative"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/radio_creative"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio_action_button"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/radio_action_button" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/save_settings" />

    </LinearLayout>

</ScrollView>
