<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.pubnative.lite.demo.ui.fragments.dfp.DFPFragment"
    tools:showIn="@layout/activity_dfp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/selected_zone_id"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/view_chosen_zone_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/banner"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/button_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/medium"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/button_interstitial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/interstitial"
        android:textColor="@android:color/white"/>
</LinearLayout>
